=========
Changelog
=========

0.2.12 (unreleased)
===================

- Nothing changed yet.


0.2.11 (2013-07-25)
===================

- More resilience for creating virtualenvs for old python versions: provide a
  bootstrapping venv that carries a compatible venv package to create the
  actual virtualenv. Brr.

- Rewrite PIP interaction with the installed database: don't need YAML any
  longer and works with old versions of PIP that are required to work with
  Python 2.4.

- Allow specifying the PIP version on the buildout master component.

- Make bootstrapping virtualenv with correct setuptools version more reliable.

- Silence verification command for virtualenv pkg_resources availability.

- Support upgrading SVN working copies using the 'svn upgrade' command if necessary.

0.2.10 (2013-07-15)
===================

- Backport buildout/virtualenv handling from 1.x branch (mostly due to
  distribute/setuptools merge, but brings nice additional robustness).

- Add ``exclude`` parameter to Directory component.


0.2.9 (2013-07-06)
==================

- Fix #12527: utils.cmd breaks on spacey arguments and embedded quotes.

- Avoid accidentally creating incorrect directories in developer VFS mapping.

- Switch testrunner to pytest. Refactor some tests to take advantage of its
  capabilities.

- Clean up PEP8 / pyflakes errors, integrate pytest plugin to ensure continued
  compliance.

- Clean up buildout versions specifications.

- Fix .dmg extractor to copy symlinks as symlinks.

- Fix remote sudo for Mac OS X target hosts.


0.2.8 (2013-06-18)
==================

- Added archive extractor for .dmg files.

- Added flag for supervisor to control whether global or individual restarts
  wait until everything is running.

0.2.7 (2013-05-22)
==================

- Fix template for Nagios check service dependencies.

- Update bootstrap call for batou-internal bootstrapping.

0.2.6 (2013-05-18)
==================

- Add component that clones from a Mercurial repository.
