@@ -1,7 +1,11 @@
 """Components to manage Python environments."""
 
-from batou.component import Component
 from batou import UpdateNeeded
+from batou.component import Component
+import logging
+
+
+logger = logging.getLogger(__name__)
 
 
 class VirtualEnv(Component):
@@ -106,20 +110,17 @@ class Package(Component):
     version = None
 
     def verify(self):
-        result, _ = self.cmd('bin/pip freeze')
-        for line in result.split('\n'):
-            try:
-                pkg, version = line.split('==')
-            except ValueError:
-                continue
-            if pkg == self.package and version == self.version:
-                break
-        else:
+        try:
+            self.cmd('bin/python -c "import pkg_resources; '
+                     'pkg_resources.require(\'{}\')[0].version == \'{}\'"'
+                     .format(self.package, self.version), silent=True)
+        except RuntimeError, e:
+            logger.debug(e[3])
             raise UpdateNeeded()
 
     def update(self):
-        self.cmd('bin/pip install "{}=={}"'.format(
-            self.package, self.version))
+        self.cmd('bin/pip --timeout=10 --force-reinstall install '
+                 '"{}=={}"'.format(self.package, self.version))
 
     @property
     def namevar_for_breadcrumb(self):
